[tool.poetry]
name = "samyfit"
version = "0.1.0"
description = "Best Fitness App"
authors = ["mohammad rahimi <mammad.rsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
odmantic = "^1.0.2"
strawberry-graphql = {extras = ["fastapi"], version = "^0.232.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
